[tool.poetry]
name = "flask-oauth2-keycloak"
version = "0.1.0"
description = ""
authors = ["Rajmohan R <ram.rajmohanr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
authlib = "^1.3.2"
requests = "^2.32.3"
pip-system-certs = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
